<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/email"
        android:layout_width="337dp"
        android:layout_height="62dp"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="125dp"
        android:ems="10"
        android:hint="@string/login_email_tv"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/login_senha_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_email_tv" />

    <TextView
        android:id="@+id/login_email_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="340dp"
        android:text="@string/login_email_tv"
        app:layout_constraintBottom_toTopOf="@+id/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usuario" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_cadastrar"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="35dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.138"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.134" />

    <TextView
        android:id="@+id/top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_top"
        android:textAlignment="center"
        android:textSize="20dp"
        android:textColor="@color/noisblack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.036" />

    <Button
        android:id="@+id/button"
        android:layout_width="342dp"
        android:layout_height="61dp"
        android:width="38mm"
        android:text="@string/login_cadastrar"
        android:backgroundTint="@color/red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.536"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.886" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_midias"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias="0.241" />

    <EditText
        android:id="@+id/usuario"
        android:layout_width="337dp"
        android:layout_height="62dp"
        android:layout_marginTop="1dp"
        android:ems="10"
        android:hint="@string/login_nome_tv"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.445"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_nome_tv" />

    <EditText
        android:id="@+id/cpf_cnpj"
        android:layout_width="337dp"
        android:layout_height="62dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="23dp"
        android:ems="10"
        android:hint="@string/login_cpf_cnpj_tv"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/login_senha_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_cpf_cnpj_tv" />

    <EditText
        android:id="@+id/senha"
        android:layout_width="337dp"
        android:layout_height="70dp"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/login_senha_tv"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/login_nome_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="47dp"
        android:text="@string/login_nome_tv"
        app:layout_constraintBottom_toTopOf="@+id/usuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.106"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.6" />

    <TextView
        android:id="@+id/login_senha_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_senha_tv"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.096"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.681" />

    <TextView
        android:id="@+id/login_cpf_cnpj_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="317dp"
        android:hint="@string/login_cpf_cnpj_tv"
        app:layout_constraintBottom_toTopOf="@+id/cpf_cnpj"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:layout_marginBottom="12dp"
        android:text="Login"
        android:textColor="@color/red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.087"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/pular"
        android:layout_width="58dp"
        android:layout_height="16dp"
        android:layout_marginTop="44dp"
        android:layout_marginBottom="16dp"
        android:text="Pular"
        android:textColor="@color/red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.994"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>